# f1-postrace-data-visualization

./: .cursorrules  .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md
.streamlit/: .gitkeep  config.toml
analysis/: __init__.py  comparison.py  degradation.py  insights.py  sectors.py  strategy.py
config/: __init__.py  settings.py
data/: loader.py  preprocessor.py
tests/: __init__.py  conftest.py  test_colors.py  test_comparison.py  test_degradation.py  test_helpers.py  test_insights.py  test_integration.py  test_loader.py  test_position_chart.py  test_preprocessor.py  test_sectors.py  test_strategy.py
utils/: __init__.py  colors.py  helpers.py
visualization/: __init__.py  degradation_chart.py  position_chart.py  sector_chart.py  tire_timeline.py
