[project]
name = "f1-strategy-analyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "streamlit==1.40.2",
    "fastf1==3.4.2",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "plotly==5.24.1",
    "matplotlib==3.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]